--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
 <html>
-	<body>
-	testing my website.
-	</body>
+<head>
+	<title>Homepage</title>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+</head>
+<body>
+	<div id="wrapper"><img src=assets/img/1.jpg>
+		<div id="home"><u>HOME</u></div>
+		<div id="about">ABOUT</div>
+		<div id="work">WORK</div>
+		<div id="text">TEXT</div>
+		<div id="contact">CONTACT</div>
+		<div id="name">HUANG MING</div>
+		<div id="saying1">"A METICULOUS HEART</div>
+		<div id="saying2">ENJOYS LONELINESS."</div>
+	</div>
+</body>
 </html>
