--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,10 @@
 	<div id="contactmsg"><input type=text style="width:600px;height:150px;"></div>
 	<div id="wrapper"><img src=assets/img/contactbackground.jpg>
 		<div id="contactpic"><img src=assets/img/contact.jpg></div>
-		<div id="home">HOME</div>
-		<div id="about">ABOUT</div>
-		<div id="work">WORK</div>
-		<div id="text">TEXT</div>
+		<div id="home"><a href="index.html">HOME</a></div>
+		<div id="about"><a href="about.html">ABOUT</a></div>
+		<div id="work"><a href="work.html">WORK</a></div>
+		<div id="text"><a href="text.html">TEXT</a></div>
 		<div id="contact"><u>CONTACT</u></div>
 		<div id="name">HUANG MING</div>
 		<div id="contactsubmit">SUBMIT</div>
