--- a/text.html
+++ b/text.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 	<div id="wrapper"><img src=assets/img/1.jpg>
-		<div id="home">HOME</div>
-		<div id="about">ABOUT</div>
-		<div id="work">WORK</div>
+        <div id="home"><a href="index.html">HOME</a></div>
+        <div id="about"><a href="about.html">ABOUT</a></div>
+        <div id="work"><a href="work.html">WORK</a></div>
 		<div id="text"><u>TEXT</u></div>
-		<div id="contact">CONTACT</div>
+        <div id="contact"><a href="contact.html">CONTACT</a></div>
 		<div id="name">HUANG MING</div>
 	<div id = "sidebar-button">menu
         </div>
