--- a/work.html
+++ b/work.html
@@ -25,11 +25,11 @@
                         <img class="img-scaled" src="assets/img/arrowright.png" />
                     </div>
                 </div>
-		<div id="home">HOME</div>
-		<div id="about">ABOUT</div>
+        <div id="home"><a href="index.html">HOME</a></div>
+        <div id="about"><a href="about.html">ABOUT</a></div>
 		<div id="work"><u>WORK</u></div>
-		<div id="text">TEXT</div>
-		<div id="contact">CONTACT</div>
+        <div id="text"><a href="text.html">TEXT</a></div>
+        <div id="contact"><a href="contact.html">CONTACT</a></div>
 		<div id="name">HUANG MING</div>
 </body>
 </html>
