--- a/work.html
+++ b/work.html
@@ -19,10 +19,10 @@
                     </div>
                 </div>
                     <div id="carousel-prev">
-                        <img class="img-scaled" src="assets/img/arrowleft.png" />
+                        <img src="assets/img/arrowleft.png" />
                     </div>
                     <div id="carousel-next">
-                        <img class="img-scaled" src="assets/img/arrowright.png" />
+                        <img src="assets/img/arrowright.png" />
                     </div>
                 </div>
         <div id="home"><a href="index.html">HOME</a></div>
