--- a/text.html
+++ b/text.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 	<div id="wrapper"><img src=assets/img/1.jpg>
-        <div id="home"><a href="index.html">HOME</a></div>
-        <div id="about"><a href="about.html">ABOUT</a></div>
-        <div id="work"><a href="work.html">WORK</a></div>
+        <div id="home"><a href="index.html" style="color:white; text-decoration:none;">HOME</a></div>
+        <div id="about"><a href="about.html" style="color:white; text-decoration:none;">ABOUT</a></div>
+        <div id="work"><a href="work.html" style="color:white; text-decoration:none;">WORK</a></div>
 		<div id="text"><u>TEXT</u></div>
-        <div id="contact"><a href="contact.html">CONTACT</a></div>
+        <div id="contact"><a href="contact.html" style="color:white; text-decoration:none;">CONTACT</a></div>
 		<div id="name">HUANG MING</div>
-	<div id = "sidebar-button">menu
+	<div id = "sidebar-button"><img src="assets/img/arrowleft.png" />
         </div>
         <nav class = "sidebar-container">
             <ul>
@@ -25,7 +25,7 @@
             </ul>
         </nav>
     <div class="critismto">
-        <div id="critismtitle">Servile Straw Mat and Precious Memory - Impression of Huang Ming's Still Life</div>
+        <div id="critismtitle">Servile Straw Mat and Precious Memory</div>
         <div id = "critism">Almost in the same period of time, I was acquainted with Huang Ming, Fan Bo and Lei Bo. Five years ago, Huang Ming was a neighbor of Fan Bo when he lived in Beijing. So, if I visited one of them, the other one would be called to join the gathering. It was interesting to discover although they had totally different personality and style of painting, they had one single commonality in the form of expression, which gave me the deepest impression. Their paintings showed two core elements.  In many paintings of Fan, you would see a withered tree and a man under the tree; while in many of Huang’s paintings, you would see an aged object and a straw mat underneath. <p></p>It can be said that the aged object and mat appeared in almost all of Huang paintings. Speaking of his painting, one will inevitably think of these two core elements.</div>
     </div>
     <div class="interviewto">
