--- a/about.html
+++ b/about.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 	<div id="wrapper"><img src=assets/img/about.jpg>
-        <div id="home"><a href="index.html">HOME</a></div>
+        <div id="home"><a href="index.html" style="color:white; text-decoration:none;">HOME</a></div>
 		<div id="about"><u>ABOUT</u></div>
-		<div id="work"><a href="work.html">WORK</a></div>
-		<div id="text"><a href="text.html">TEXT</a></div>
-		<div id="contact"><a href="contact.html">CONTACT</a></div>
+		<div id="work"><a href="work.html" style="color:white; text-decoration:none;">WORK</a></div>
+		<div id="text"><a href="text.html" style="color:white; text-decoration:none;">TEXT</a></div>
+		<div id="contact"><a href="contact.html" style="color:white; text-decoration:none;">CONTACT</a></div>
 		<div id="name">HUANG MING</div>
 		<div id="abouttext">Huang Ming is an representational oil painter currently living in 
 			Hangzhou, Zhejiang, China. He enjoys national fame with his unique individual
