--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
 	<div id="wrapper"><img src=assets/img/1.jpg>
 		<div id="home"><u>HOME</u></div>
-		<div id="about"><a href="about.html">ABOUT</a></div>
-		<div id="work"><a href="work.html">WORK</a></div>
-		<div id="text"><a href="text.html">TEXT</a></div>
-		<div id="contact"><a href="contact.html">CONTACT</a></div>
+		<div id="about"><a href="about.html" style="color:white; text-decoration:none;">ABOUT</a></div>
+		<div id="work"><a href="work.html" style="color:white; text-decoration:none;">WORK</a></div>
+		<div id="text"><a href="text.html" style="color:white; text-decoration:none;">TEXT</a></div>
+		<div id="contact"><a href="contact.html" style="color:white; text-decoration:none;">CONTACT</a></div>
 		<div id="name">HUANG MING</div>
 		<div id="saying1">"A METICULOUS HEART</div>
 		<div id="saying2">ENJOYS LONELINESS."</div>
