--- a/work.html
+++ b/work.html
@@ -25,11 +25,11 @@
                         <img src="assets/img/arrowright.png" />
                     </div>
                 </div>
-        <div id="home"><a href="index.html">HOME</a></div>
-        <div id="about"><a href="about.html">ABOUT</a></div>
+        <div id="home"><a href="index.html" style="color:white; text-decoration:none;">HOME</a></div>
+        <div id="about"><a href="about.html" style="color:white; text-decoration:none;">ABOUT</a></div>
 		<div id="work"><u>WORK</u></div>
-        <div id="text"><a href="text.html">TEXT</a></div>
-        <div id="contact"><a href="contact.html">CONTACT</a></div>
+        <div id="text"><a href="text.html" style="color:white; text-decoration:none;">TEXT</a></div>
+        <div id="contact"><a href="contact.html" style="color:white; text-decoration:none;">CONTACT</a></div>
 		<div id="name">HUANG MING</div>
 </body>
 </html>
